--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ list-style: none;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    text-decoration: none;
 }
 
 .about{
@@ -520,3 +521,11 @@ cursor: pointer;
     width: 550px;
    
 }
+.media iframe{
+width: 1200px;
+height: 600px;
+padding-left: 160px;
+padding-bottom: 10px;
+}
+
+
