--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ list-style: none;
     border-radius: 2px;
     cursor: pointer;
 }
+.about-text5:hover{
+    background-color: black;
+}
 
 .header {
 display: flex;
@@ -116,7 +119,11 @@ font-size: 16px;
 }
 .phone_number a{
     color: #fff;
-}
+    text-decoration: none;}
+.phone_number a:hover{
+        color: #ff9933;
+    }
+
 .buttongroup{
     margin-right: 50px;
 }
@@ -139,10 +146,14 @@ transition: 0.9s;
 }
 
 .home {
-margin: 30px 60px 20px 60px;
+padding: 30px 60px 20px 60px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+position: sticky;
+top: 0;
+background-color: #fff;
+z-index: 1;
 }
 .logo a{
     font-size: 55px;
@@ -168,7 +179,11 @@ font-size: 20px;
 border-bottom: 3px solid #ff9933;
 padding-bottom: 15px;
 }
+.menu .baseline{
+    border-bottom: 3px solid #ff9933;
+padding-bottom: 15px;
 
+}
 .do button {
 background-color: #fff;
 border: 3px solid orange;
@@ -251,10 +266,13 @@ padding-left: 150px;
     padding-bottom: 60px;
     padding-left: 55px;
 }
-.sleepcat{
+.catphoto-item{
     position: relative;
     height: 502px;
     width: 372px;
+}
+.catphoto-item .cover:hover{
+    background-color:rgba(0,0,0,.6);
 }
 .cover{
     color: white;
@@ -275,21 +293,31 @@ padding-left: 150px;
     color: white;
     transition: .7s;
 }
+.cover a:hover{
+    color: #ff9933;
+}
 .girl_dog{
     position: relative;
     height: 502px;
     width: 372px;
+}
+.girl_dog >:hover{
+    background-color:rgba(0,0,0,.6);
 }
 .woman_cat{
     position: relative;
     height: 502px;
     width: 372px;
 }
+.woman_cat div:hover{
+    background-color:rgba(0,0,0,.6);
+}
 .help{
     background-color: #f9f9f9;
     text-align: center;
-    margin: 0;
+    margin: 100px;
 }
+
 .help-text1{
     font-size: 50px;
     font-weight: 700;
@@ -305,12 +333,12 @@ padding-left: 150px;
 }
 .volunteer{
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     padding-top: 60px;
     padding-right: 20px;
     padding-bottom: 30px;
     padding-left: 55px;
-    margin: 0;
+    margin: 120px;
 }
 .volunteer-text1{
     margin: 0;
@@ -350,14 +378,16 @@ background-color: #ff9933;
 border-radius: 2px;
 cursor: pointer;
 }
+.volunteer-button:hover{
+    background-color: black;
+}
 .event{
     background-image: url(assets/asset\ 11.jpeg);
     background-position: center;
     background-size: 90%;
     background-repeat:no-repeat ;
     text-align: center;
-    margin: 0;
-}
+   }
 .event-text1{
     margin: 0;
     padding-top: 195px;
@@ -394,6 +424,9 @@ cursor: pointer;
     cursor: pointer;
     transition: .3s;
 }
+.event-button1:hover{
+    background-color: #7ABEE9;
+}
 .event-button2{
     margin-left: 50px;
     margin-bottom: 180px;
@@ -407,6 +440,9 @@ cursor: pointer;
     border-radius: 2px;
     cursor: pointer;
     transition: .3s;
+}
+.event-button2:hover{
+    background-color: #7ABEE9;
 }
 .dog-jogging{
     background-image: url(assets/asset\ 13.jpeg);
@@ -440,6 +476,16 @@ cursor: pointer;
     background-image:url(assets/asset\ 16.jpeg);
     background-size: 100%;
     background-position: center;
+    display: flex;
+    justify-content: space-evenly;
+   align-items: center;
+}
+.dogwithboy p{
+    color: #fff;
+    font-size: 30px;
+    justify-content: space-evenly;
+    text-align: center;
+     padding-left: 10px;
 }
 .adorable{
     margin: 70px 0px;
@@ -449,15 +495,41 @@ cursor: pointer;
     text-align: center;
     color: #555;
 }
-.adorablepho{
+.adorable-photos{
     display: flex;
-    margin: 50px 0px 0px;
+    /* margin: 50px 0px 0px; */
 }
-.adorablepho img{
+.adorable-photos-item{
     width: 25%;
-    height:100%;
+    position: relative;
+}
+.adorable-photos img{
+    width: 100%;
+    /* height:100%; */
     vertical-align: bottom;
 }
+.adorable-photos-item .cover i{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0;
+    color: #fff;
+    transition: .4s;
+}
+.adorable-photos-item .cover i:hover{
+    background-color: rgba(255,153,51,.6);
+    font-size: 50px;
+}
+
+
+
 .footer{
     background-color: #222;
     width: 100%;
@@ -487,6 +559,7 @@ cursor: pointer;
     text-align: center;
     line-height: 2.5;
 }
+
 .pro{
     width: 1200px;
     margin: auto;
@@ -528,4 +601,63 @@ padding-left: 160px;
 padding-bottom: 10px;
 }
 
-
+.contact i{
+    color: #ff9933;
+    padding: 10px;
+    font-size: 15px;
+}
+.fbutton{
+   font-size: 20px;
+   padding-bottom: 20px;
+   display: flex;
+   text-align: center;
+   justify-content: center;
+  
+   
+}
+.fbutton i{
+color: #fff;
+}
+.fbutton .fbutton_one{
+   background-color:#00aeef;
+   font-size: 20px;
+   width: 56px;
+   height: 56px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-right: 10px;
+  
+}
+.fbutton_two{
+    background-color:#547cd5;  
+    font-size: 20px;
+    width: 56px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+    
+}
+.fbutton_thr{
+    background-color:#cc3300; 
+    font-size: 20px;
+    width: 56px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+   
+}
+.fbutton_four{
+    background-color:#0075b6; 
+    font-size: 25px;
+    width: 56px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+   }
