--- a/Project/Project1/style.css
+++ b/Project/Project1/style.css
@@ -200,7 +200,7 @@ border: 0px;
 
 
 .cat {
-background-image: url(/assets/asset\ 7.jpeg);
+background-image: url(assets/asset_7.jpeg);
 background-position: center;
 background-size: 125%;
 background-repeat: no-repeat;
@@ -382,7 +382,7 @@ cursor: pointer;
     background-color: black;
 }
 .event{
-    background-image: url(assets/asset\ 11.jpeg);
+    background-image: url(assets/asset_11.jpeg);
     background-position: center;
     background-size: 90%;
     background-repeat:no-repeat ;
@@ -445,7 +445,7 @@ cursor: pointer;
     background-color: #7ABEE9;
 }
 .dog-jogging{
-    background-image: url(assets/asset\ 13.jpeg);
+    background-image: url(assets/asset_13.jpeg);
     width: 100%;
     height: 100vh;
     background-attachment: fixed;
@@ -473,7 +473,7 @@ cursor: pointer;
     width: 100%;
     height: 550px;
     overflow: hidden;
-    background-image:url(assets/asset\ 16.jpeg);
+    background-image:url(assets/asset_16.jpeg);
     background-size: 100%;
     background-position: center;
     display: flex;
@@ -569,7 +569,7 @@ cursor: pointer;
     justify-content: space-between;
 }
 .pro-f{
-    background-image:url(assets/asset\ 14.jpeg);
+    background-image:url(assets/asset_14.jpeg);
     display: flex;
     flex-wrap: wrap;
     background-position: center;
@@ -584,7 +584,7 @@ cursor: pointer;
     border-radius: 50%;
 }
 .pro-m{
-    background-image:url(assets/asset\ 15.jpeg);
+    background-image:url(assets/asset_15.jpeg);
     display: flex;
     flex-wrap: wrap;
     background-position: center;
