--- a/Project/Project2/style.scss
+++ b/Project/Project2/style.scss
@@ -22,13 +22,13 @@
     margin: auto;
 
     &:hover {
-        background-color: green;
+        background-color:#679509;
         transition: .9s;
     }
 }
 
 .header {
-    background-color: rgb(21, 116, 21);
+    background-color: #679509;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -42,22 +42,44 @@
     font-size: 16px;
     margin: 15px 120px;
     font-weight: 300;
-}
-
-.menu {
-    color: white;
-    font-size: 14px;
-    margin: 15px 120px;
-
-    a {
-        color: white;
-        text-decoration: none;
-        margin: 0 10px;
-        vertical-align: baseline;
-        cursor: pointer;
+    p {
+        color: #fff;
     }
 }
 
+// .menu {
+//     color: white;
+//     font-size: 14px;
+//     margin: 15px 120px;
+
+//     a {
+//         color: white;
+//         text-decoration: none;
+//         margin: 0 10px;
+//         vertical-align: baseline;
+//         cursor: pointer;
+//     }
+// }
+.menu{
+    display: flex;
+    padding-right: 250px;
+    li {
+        position: relative;
+        padding: 6px 8px;
+        a{
+            color: #fff;
+            text-decoration: none;
+            font-size: 14px;
+        }
+    }
+    
+    li + li::before{
+        content: '|';
+        color: #fff;
+        position: absolute;
+        right: 0;
+    }
+}
 .logo {
     display: flex;
     justify-content: space-between;
@@ -67,15 +89,16 @@
     .nav {
         display: flex;
         margin: 15px 120px;
+    }
 
-        a {
-            color: rgb(107, 103, 103);
-            text-decoration: none;
-            margin: 0 10px;
-            cursor: pointer;
-        }
+    a {
+        color: rgb(107, 103, 103);
+        text-decoration: none;
+        margin: 0 10px;
+        cursor: pointer;
     }
 }
+
 
 .icon {
     margin: 15px 120px;
@@ -106,9 +129,11 @@
         text-align: left;
     }
 
+
     b {
-        color: rgb(9, 124, 19);
+        color:#679509;
     }
+
 
     & :nth-child(3) {
         margin: 10px;
@@ -126,13 +151,17 @@
 
 
 
+
 .main button {
     margin: 20px;
     width: 120px;
     height: 80px;
-    background-color: rgb(52, 185, 52);
+    background-color:#679509;
     border: none;
     color: white;
+    &:hover {
+background-color: black;
+    }
 }
 
 .welcome {
@@ -142,7 +171,8 @@
 
 h1 {
     font-size: 60px;
-    color: rgb(23, 105, 23);
+    color: #679509;
+    font-family: 'Pacifico', cursive;
 }
 
 .three {
@@ -153,17 +183,21 @@ h1 {
         margin: 10px;
     }
 
+
     p {
         color: rgb(119, 118, 118);
         font-size: 18px;
         margin: 15px;
     }
 
+
     .wrap {
         margin: 20px;
         text-align: center;
     }
 }
+
+
 
 
 
@@ -196,6 +230,7 @@ h3 {
     font-size: 60px;
     margin: 15px;
     color: rgb(60, 61, 60);
+    font-family: 'Pacifico', cursive;
 }
 
 .products-nav {
@@ -216,42 +251,288 @@ h3 {
     flex-wrap: wrap;
     justify-content: center;
     margin: 15px 120px;
+    
+    .items {
+        position: relative;
+    }
+    img {
+        // border: 1px solid grey;
+    }
 }
+
+#sale {
+    position: absolute;
+    background-color: red;
+    right: 0;
+    top: 0;
+    margin: 10px;
+    width: 60px;
+    padding: 5px;
+    text-align: center;
+    color: #fff;
+}
+#featured {
+    position: absolute;
+    background-color:#86AE34;
+    right: 0;
+    top: 0;
+    margin: 10px;
+    width: 80px;
+    padding: 5px;
+    text-align: center;
+    color: #fff;
+}
+
+
+
+.items {
+    width: 20%;
+    margin: 15px;
+
+    h2 {
+        font-size: 16px;
+        margin: 5px 0;
+    }
+
+    h3 {
+        font-size: 16px;
+        margin: 5px 0;
+    }
+
+}
+
 
 .fresh {
     background-image: url(./image/Fruits.png);
     display: flex;
-    /* justify-content: center;
-     align-items: center; */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     height: 480px;
     margin: 15px 0;
     background-position: center;
+
+    h1 {
+        color: black;
+        font-size: 60px;
+        margin: 30px;
+    }
+
+
+    h2 {
+        font-size: 48px;
+        margin: 30px;
+        font-family: 'Pacifico', cursive;
+    }
+
+
+    button {
+        margin: 30px;
+        background-color: #679509;
+        border: none;
+        width: 120px;
+        height: 60px;
+        color: #fff;
+    }
+    button:hover {
+        background-color: black;
+    }
 }
+
+
 
 .love {
     margin: 30px 120px;
     display: flex;
+    align-items: center;
+    justify-content: center;
 
     img {
         width: 100%;
     }
 
+
+    h2 {
+        font-size: 30px;
+        color: black;
+        margin: 15px;
+        font-family: 'Pacifico', cursive;
+    }
+
+
+    p {
+        color: rgb(119, 118, 118);
+        font-size: 16px;
+    }
+
 }
 
+
+
+.blog {
+    background-image: url(./image/gray.png);
+    height: 800px;
+    margin: 15px 0;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+
+    h2 {
+        font-size: 28px;
+        margin: 15px;
+        color: rgb(60, 61, 60);
+        font-weight: bolder;
+        font-family: 'Pacifico', cursive;
+    }
+}
 
 
 .lastest {
-    background-image: url(./image/gray.png);
-    height: 800px;
-}
-
-.cereal {
     display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    justify-content: center;
+    // margin: 15px 120px;
 
-    .sale {
-        width: 25%;
+    .wrap {
+        text-align: center;
+        width: 100%;
     }
-}
+
+    // margin: 30px;
+
+    // img {
+    //     width: 100%;}
+
+
+        button {
+            background-color: rgb(52, 185, 52);
+            border: none;
+            margin: 20px;
+            color: white;
+            padding: 5px;
+        }
+
+        h3 {
+            margin: 0;
+            color: rgb(71, 60, 60);
+            font-size: 20px;
+        }
+    }
+
+
+
+
+//     .cereal {
+//         display: flex;
+//         margin: auto;
+//         justify-content:space-evenly;
+//         align-items: flex-start;
+// }
+    .sale {
+       display: flex;
+       flex-wrap: wrap;
+      justify-content: center;
+     
+    img {
+        border: 1px solid  grey;
+        margin-right: 30px;}
+    h1 {
+        font-size: 16px;
+        color:rgb(23,105,23)
+    }
+    h4 {
+        font-size: 16px;
+        color: rgb(60,61,60);
+    }
+    // p {
+    //     font-size: 24px;
+    //     color: rgb(18,245,18);
+    // }
+    }
+    .sale-item {
+        flex-direction: column;
+        margin: 10px 15px;
+        h2{
+            font-family: 'Pacifico', cursive;
+        }
+    } 
+    .people {
+      background-image:url(/image/green.png);
+      background-size: contain;
+     padding: 180px 0;
+     background-repeat: no-repeat;
+     
+      .title {
+          text-align: center;
+          margin: 15px 0;
+          font-family: 'Pacifico', cursive;
+      }
+      .person {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+      }
+      img {
+          width: 10%;
+          border-radius: 80%;
+          font-size: 20px;
+      }
+      .person p {
+          color: #fff;
+          font-size: 16px;
+      }
+    }
+   .subscribe {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       h2 {
+           font-size: 28px;
+           color: rgb(60, 61, 60);
+           font-family: 'Pacifico', cursive;
+
+       }
+       input {
+           width: 400px;
+           height: 24px;
+           margin: 20px;
+       }
+       .box button {
+           background-color: #00d463;
+           border: none;
+           margin: 0 20px;
+           color: #fff;
+           padding: 10px;
+           position: relative;
+       }
+   } 
+   .footer {
+       margin: 15px 0 0;
+       background-position: center;
+       background-image: url(/image/gray-two.png);
+       display: flex;
+       justify-content: space-around;
+       flex-wrap: wrap;
+       ul {
+           display: flex;
+           flex-flow: column;
+           align-items: center;
+       }
+       .contain h2 {
+           font-size: 28px;
+           color: rgb(60, 61, 60);
+           font-family: 'Pacifico', cursive;
+       }
+       ul a {
+color: rgb(119, 118, 118);
+font-size: 16px;
+margin: 8px;
+text-decoration: none;
+       }
+   } 
+   .contain-info h2 {
+    font-size: 28px;
+    color: rgb(60, 61, 60);
+    font-family: 'Pacifico', cursive;}
