--- a/Project/Project3/style.css
+++ b/Project/Project3/style.css
@@ -1,3 +1,97 @@
-.header[
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-]
+.gray {
+  background-color: #f5f5f5;
+  height: 290px;
+  width: 439px;
+  left: 720px;
+  bottom: 200px;
+  position: absolute;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.control {
+  position: absolute;
+  height: 388px;
+  width: 355px;
+  left: 200px;
+  bottom: 200px;
+}
+
+.toyota {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 200px;
+}
+
+.up {
+  background-color: #bb0404;
+  color: #fff;
+  width: 300px;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.up .up-num {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.up .up-num h2 {
+  font-size: 150px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  line-height: 110px;
+}
+
+.up .title {
+  font-size: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.down {
+  background-color: black;
+  color: white;
+  width: 300px;
+  height: 250px;
+  position: absolute;
+}
+
+.down p {
+  font-size: 20px;
+}
+
+.down p:first-child {
+  padding: 20px  0;
+}
+/*# sourceMappingURL=style.css.map */
