--- a/Project/Project4/style.css
+++ b/Project/Project4/style.css
@@ -84,4 +84,9 @@
   display: -ms-flexbox;
   display: flex;
 }
+
+body {
+  background-image: url(image/asset_18.png);
+  background-repeat: repeat;
+}
 /*# sourceMappingURL=style.css.map */
