--- a/Project/Project4/style.scss
+++ b/Project/Project4/style.scss
@@ -69,3 +69,8 @@
 .modal-header {
     display: flex;
 }
+
+body {
+    background-image: url(image/asset_18.png);
+    background-repeat: repeat;
+}
