--- a/Project/Project5/assets/css/style.css
+++ b/Project/Project5/assets/css/style.css
@@ -30,7 +30,7 @@
 }
 
 .iphone-lay {
-  padding: 65px 0;
+  padding: 45px 0;
   width: 250px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -65,7 +65,7 @@
 }
 
 .iphone-color .iphone-lay {
-  padding: 65px 0;
+  padding: 45px 0;
   width: 250px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -86,5 +86,76 @@
 
 .iphone-color .iphone-lay:hover {
   border: 2px solid #888888;
+}
+
+.top h2 {
+  font-weight: bolder;
+}
+
+.product-red-info img {
+  width: 85px;
+  height: 24px;
+  margin-right: 15px;
+}
+
+.product-red-info p {
+  font-size: 12px;
+  color: #888888;
+}
+
+.buy-content {
+  background-color: #dbdadae8;
+  padding: 20px 10px;
+}
+
+.buy-content .finally-price-box .finally-price {
+  font-size: 32px;
+  font-weight: 700;
+  color: black;
+  margin: 0;
+}
+
+.buy-content .finally-price-box p {
+  font-size: 14px;
+  color: #888888;
+  margin: 0;
+}
+
+.buy-content .finally-price-box a {
+  font-size: 14px;
+}
+
+.buy-content .basket {
+  margin-top: 30px;
+}
+
+.buy-content .basket button {
+  width: 303.325px;
+  height: 34.8px;
+  font-size: 17px;
+}
+
+.buy-content .basket .heart {
+  margin-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.buy-content .basket .heart i {
+  color: #0070c9;
+  font-size: 22px;
+}
+
+.buy-content .take-ship p {
+  font-size: 14px;
+  margin: 20px 0;
+}
+
+.buy-content .take-ship p a {
+  font-size: 14px;
 }
 /*# sourceMappingURL=style.css.map */
