--- a/Project/Project5/assets/css/style.scss
+++ b/Project/Project5/assets/css/style.scss
@@ -32,7 +32,7 @@
 }
 
 .iphone-lay {
-    padding: 65px 0;
+    padding: 45px 0;
     width: 250px;
     //flex-direction: column;
     //display: flex;
@@ -70,7 +70,7 @@
 
 
     .iphone-lay {
-        padding: 65px 0;
+        padding: 45px 0;
         width: 250px;
         //flex-direction: column;
         //display: flex;
@@ -92,4 +92,85 @@
             border: 2px solid #888888;
         }
     }
+}
+
+.top h2 {
+    font-weight: bolder;
+}
+
+.product-red-info {
+    img {
+        width: 85px;
+        height: 24px;
+        margin-right: 15px;
+
+
+    }
+
+    p {
+        font-size: 12px;
+        color: #888888;
+    }
+}
+
+
+
+.buy-content {
+    background-color: #dbdadae8;
+    padding: 20px 10px;
+
+    .finally-price-box {
+        .finally-price {
+            font-size: 32px;
+            font-weight: 700;
+            color: black;
+            margin: 0;
+        }
+
+        p {
+            font-size: 14px;
+            color: #888888;
+            margin: 0;
+        }
+
+        a {
+            font-size: 14px;
+        }
+    }
+
+    .basket {
+        //vertical-align: center;
+        margin-top: 30px;
+
+
+        button {
+            width: 303.325px;
+            height: 34.8px;
+            font-size: 17px;
+        }
+
+        .heart {
+            margin-left: 20px;
+            display: flex;
+            align-items: center;
+
+            i {
+                color: #0070c9;
+                font-size: 22px;
+            }
+        }
+
+    }
+
+    .take-ship {
+        p {
+            font-size: 14px;
+            margin: 20px 0;
+
+            a {
+                font-size: 14px;
+            }
+        }
+    }
+
 }
