--- a/Project/Project5/assets/css/style.css
+++ b/Project/Project5/assets/css/style.css
@@ -9,6 +9,12 @@
   margin: 15px 0;
 }
 
+#iphone-family {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 .iphone-color {
   display: -webkit-box;
   display: -ms-flexbox;
