--- a/Project/Project5/assets/css/style.scss
+++ b/Project/Project5/assets/css/style.scss
@@ -8,6 +8,11 @@
     margin: 15px 0;
 }
 
+#iphone-family {
+    position: sticky;
+    top: 0;
+}
+
 .iphone-color {
     display: flex;
     //padding: 65px 50px;
