--- a/Project/Project7/assets/css/Style.scss
+++ b/Project/Project7/assets/css/Style.scss
@@ -18,3 +18,14 @@
         height: 100%;
     }
 }
+
+// .input-group .input-group-text {
+//     background-color: #3aff9c;
+//     color: white;
+// }
+
+// .input-group .btn-guess {
+//     width: 80px;
+//     background-color: #ff6638;
+//     color: white;
+// }
